--- a/FirstImpressions/Storyboard.storyboard
+++ b/FirstImpressions/Storyboard.storyboard
@@ -316,14 +316,14 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Eat chocolate-flavored poop" translatesAutoresizingMaskIntoConstraints="NO" id="kRy-Xa-hVO">
                                 <rect key="frame" x="20" y="120" width="280" height="87"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.039215687662363052" green="0.97254908084869385" blue="0.76078438758850098" alpha="1" colorSpace="deviceRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Poop-flavored chocolate" translatesAutoresizingMaskIntoConstraints="NO" id="gwh-Uh-iVh">
                                 <rect key="frame" x="20" y="252" width="280" height="87"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.69803923368453979" green="0.69019609689712524" blue="0.93333339691162109" alpha="1" colorSpace="deviceRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -627,6 +627,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ArT-rh-oVm"/>
+        <segue reference="Shm-Kn-jIc"/>
     </inferredMetricsTieBreakers>
 </document>
