--- a/FirstImpressions/Storyboard.storyboard
+++ b/FirstImpressions/Storyboard.storyboard
@@ -275,6 +275,16 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zAl-75-ijk">
+                                <rect key="frame" x="95" y="518" width="130" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Share contact info!">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="shareContactInfo" destination="HaM-Tq-Mac" eventType="touchUpInside" id="YoA-yg-eUP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -282,6 +292,7 @@
                     <connections>
                         <outlet property="messageBody" destination="wbU-U7-WAq" id="q5i-A7-zEo"/>
                         <outlet property="messageResponse" destination="dKp-FD-Xco" id="hPY-Fm-wcK"/>
+                        <outlet property="shareContactInfoButton" destination="zAl-75-ijk" id="WAk-aK-9LE"/>
                         <segue destination="Zde-cc-oqI" kind="modal" id="37Y-kc-cD0"/>
                     </connections>
                 </viewController>
