--- a/FirstImpressions/Storyboard.storyboard
+++ b/FirstImpressions/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4504" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UN1-tC-aoL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4504" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UN1-tC-aoL">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3734.1"/>
     </dependencies>
@@ -151,7 +151,7 @@
                     <connections>
                         <outlet property="DefaultMessage" destination="sCj-ZY-Hcp" id="ZNg-LM-Or4"/>
                         <outlet property="inputMessage" destination="Uok-wT-6SF" id="nOZ-vM-LOT"/>
-                        <segue destination="ZFg-U1-hg6" kind="push" identifier="ReceivedMessageSegue3" id="ArT-rh-oVm"/>
+                        <segue destination="ZFg-U1-hg6" kind="push" identifier="receivedMessageSegue3" id="ArT-rh-oVm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="332-cj-wJr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -205,7 +205,7 @@
                     <tabBarItem key="tabBarItem" title="Blank" id="3aY-QB-kg5"/>
                     <connections>
                         <outlet property="inputMessage" destination="qfF-TE-oDD" id="OPu-tB-Q4c"/>
-                        <segue destination="ZFg-U1-hg6" kind="push" identifier="ReceivedMessageSegue" id="rbm-h4-OUX"/>
+                        <segue destination="ZFg-U1-hg6" kind="push" identifier="receivedMessageSegue" id="rbm-h4-OUX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1t1-m8-LnI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -357,7 +357,7 @@
                     <connections>
                         <outlet property="first" destination="kRy-Xa-hVO" id="FsS-rx-3Lc"/>
                         <outlet property="second" destination="gwh-Uh-iVh" id="KCI-bp-Kkg"/>
-                        <segue destination="ZFg-U1-hg6" kind="push" identifier="ReceivedMessageSegue2" id="Shm-Kn-jIc"/>
+                        <segue destination="ZFg-U1-hg6" kind="push" identifier="receivedMessageSegue2" id="Shm-Kn-jIc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bMM-r5-rku" userLabel="First Responder" sceneMemberID="firstResponder"/>
