--- a/FirstImpressions/Storyboard.storyboard
+++ b/FirstImpressions/Storyboard.storyboard
@@ -508,7 +508,7 @@
                             <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UWj-dB-7PG">
                                 <rect key="frame" x="208" y="238" width="92" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="0.18167800410000001" blue="0.34421281679999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.51372551919999998" green="0.81176471709999998" blue="0.1019607931" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="SEND">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -526,7 +526,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="6" id="HcZ-tA-WpI"/>
                                 </constraints>
-                                <color key="progressTintColor" red="1" green="0.85294659799999994" blue="0.9161399267" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="progressTintColor" red="0.82202773866836987" green="0.99174904336734693" blue="0.57550822235944288" alpha="1" colorSpace="calibratedRGB"/>
                             </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
